# Power-Flow

./: .gitignore  CMakeLists.txt  MHD_heating.py  README.md  pyproject.toml  requirements.txt
configs/: mykonos.yaml  mykonos_preview.yaml  water_fragment_mechanism.yaml
data/conductivity/: README.md  ss304_knoepfel_seed.csv
data/cr_model/: README.md  references.yaml  rovibrational_manifest.yaml  yacora_hydrogen_reactions.yaml
data/cross_sections/: README.md  cross_section_manifest.yaml  prab_26_040401_reactions.yaml
data/cross_sections/nist/: e_H2O_total_ionization_nist_beb.csv  e_H2_ionization_ref75_nist_beb.csv  e_H2plus_total_ionization_nist_beq.csv
docs/: allegra_mhd_notes.md  conductivity_tables.md  framework_roadmap.md  mhd_course_notes.md
examples/geometry/: mykonos_foil_gap_5mm.json  parallel_plate_gap.json
examples/traces/: mykonos_synthetic.csv
mhdlab/: __init__.py  backend.py  bolsig.py  chemistry.py  conductivity_tables.py  config.py  constants.py  cr_data.py  cross_sections.py  desorption.py  diagnostics.py  geometry.py  materials.py  mhd.py  neutrals.py  runner.py  spectra.py  traces.py
src/mhd_core/: bindings.cpp  reduced.cpp  reduced.hpp
tests/: test_bolsig.py  test_conductivity_tables.py  test_cr_data.py  test_cross_sections.py  test_geometry.py  test_mhd.py  test_native_core.py  test_neutrals.py  test_smoke_run.py  test_traces.py
tools/: build_conductivity_table.py  extract_prab_cross_sections.py  visualize_run.py
