[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mhdlab"
version = "0.1.0"
description = "Reduced MHD, kinetic-neutral, BOLSIG, CR, and synthetic spectra research prototype"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "imageio>=2.34",
  "pillow>=10.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.scikit-build]
cmake.version = ">=3.26"
ninja.version = ">=1.11"
wheel.packages = ["mhdlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
